src/test/deca/syntax/valid/parser/oracle/class_with_asm_method.deca
class E{
	void f() asm("\"Hello \n
	\\ World
	!\"");
}