src/test/deca/syntax/invalid/parser/oracle/instanceof_with_wrong_left_param.deca
{
    println("Hello World !") instanceof A;
}